--- a/WebUIBlazor/Pages/Printers.razor
+++ b/WebUIBlazor/Pages/Printers.razor
@@ -12,7 +12,7 @@
                         <MudText Typo="Typo.overline"><b>ID:</b> @p.Id</MudText>
                     </MudListItem>
                     <MudListItem>
-                        <MudText Typo="Typo.overline"><b>Model:</b> @p.Model</MudText>
+                        <MudText Typo="Typo.overline"><b>Name:</b> @p.Name</MudText>
                     </MudListItem>
                     <MudListItem>
                         <MudText Typo="Typo.overline"><b>PrinterFirmwareVersion:</b> @p.PrinterFirmwareVersion</MudText>
