--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -1,12 +1,15 @@
 ﻿@page "/print"
 @page "/"
 @inject PrintingService PrintManager
-@inject PrinterDataServiceTest PrinterDataHandler
+@inject PrinterDataService PrinterDataHandler
 @inject NavigationManager MyNavigationManager
+@inject HotendTemperatureService HotendTemperatureService
 @inject BackgroundTimer background
 @inject PortConnectionManagerService PortManager
+@inject PrinterManagerService printerManager
 @inject Data.BedLevelingService levelBed
 
+@inject IDialogService DialogService
 @inject ISnackbar Snackbar
 
 @implements IDisposable
@@ -32,11 +35,11 @@
             <!-- Button to start printing -->
             @if (PrintManager.isPrinting)
             {
-                <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.ConfirmStartAsync">Start</MudButton>
+                <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="ConfirmStartAsync">Start</MudButton>
             }
             else
             {
-                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.ConfirmStartAsync">Start</MudButton>
+                <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="ConfirmStartAsync">Start</MudButton>
 
             }
             <!-- Button to pause printing -->
@@ -44,7 +47,7 @@
             <!-- Button to resume printing -->
             <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.ResumePrint">Resume</MudButton>
             <!-- Button to stop printing -->
-            <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrintManager.StopPrint(PortManager.connections[PortManager.SelectedPrinter])">Stop</MudButton>
+            <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => StopPrint()">Stop</MudButton>
         </ContainerSpaceBetween>
 
         <MudDivider Class="pt-5" />
@@ -119,7 +122,7 @@
             </MudSelect>
         }
 
-        @if (PortManager.connection.ConnectionServiceSerial.IsConnected)
+        @if (PortManager.ActiveConnection.ConnectionServiceSerial.IsConnected)
         {
             <MudSelect @bind-Value="@PrintManager.fileToPrint" T="string" Label="SD Files" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
 
@@ -190,34 +193,40 @@
                         <ContainerSpaceBetween Class="pt-0 mt-0">
                             <MudText>Current Hotend Temperature:</MudText>
                             <MudText Style="display:flex; align-items:center;">
-                                @if (PrinterDataHandler.HotendTemperatureService.currentHotendTemperature < PrinterDataHandler.HotendTemperatureService.targetHotendTemperature)
+                                @if (HotendTemperatureService.currentHotendTemperature < HotendTemperatureService.targetHotendTemperature)
                                 {
                                     <MudIcon Icon="@Icons.Material.Filled.LocalFireDepartment"
                                              Size="Size.Large"
                                              Color="@(_isPrimaryColor ? Color.Warning : Color.Default)"
                                              Class="pr-2 mr-2" />
                                 }
-                                @PrinterDataHandler.HotendTemperatureService.currentHotendTemperature
+                                @HotendTemperatureService.currentHotendTemperature
+                            </MudText>
+                            <MudText>
+                                @if (printerManager.Printers != null && printerManager.Printers.Count > 0)
+                                {
+                                    @printerManager.ActivePrinter.HotendTemperatures.CurrentTemp
+                                }
                             </MudText>
                         </ContainerSpaceBetween>
                         <!-- Container with text for target hotend temperature -->
                         <ContainerSpaceBetween Class="pt-2 mt-2">
                             <MudText>Target Hotend Temperature:</MudText>
-                            <MudText>@PrinterDataHandler.HotendTemperatureService.targetHotendTemperature</MudText>
+                            <MudText>@HotendTemperatureService.targetHotendTemperature</MudText>
                         </ContainerSpaceBetween>
                     </MudItem>
                     <MudItem xs="12" sm="12" md="6">
                         <MudGrid Style="align-items: center;">
                             <!-- MudNumericField for setting hotend temperature -->
                             <MudItem xs="12" sm="6" md="12">
-                                <MudNumericField @bind-Value="PrinterDataHandler.HotendTemperatureService.setHotendTemperature" Label="Set Hotend Temperature" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
+                                <MudNumericField @bind-Value="HotendTemperatureService.setHotendTemperature" Label="Set Hotend Temperature" Immediate="true" Variant="Variant.Text" Min="0" HideSpinButtons="true" />
                             </MudItem>
                             <MudItem xs="12" sm="6" md="12" Class="my-0 py-0">
                                 <ContainerSpaceBetween Class="ma-0 pa-0">
                                     <!-- Button to set hotend temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrinterDataHandler.HotendTemperatureService.SetHotendTemperature(PrinterDataHandler.HotendTemperatureService.setHotendTemperature)">Set Temperature</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.SetHotendTemperature(HotendTemperatureService.setHotendTemperature)">Set Temperature</MudButton>
                                     <!-- Button to turn off hotend temperature -->
-                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => PrinterDataHandler.HotendTemperatureService.SetHotendTemperature(0)">Turn Off</MudButton>
+                                    <MudButton FullWidth="true" Size="Size.Small" Variant="Variant.Text" Color="Color.Error" @onclick="() => HotendTemperatureService.SetHotendTemperature(0)">Turn Off</MudButton>
                                 </ContainerSpaceBetween>
                             </MudItem>
                         </MudGrid>
@@ -310,15 +319,15 @@
                 <MudGrid>
                     <!-- Button to change filament -->
                     <MudItem Class="mr-0 pr-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrinterDataHandler.HotendTemperatureService.ChangeFilament()">Change Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.ChangeFilament()">Change Filament</MudButton>
                     </MudItem>
                     <!-- Button to load filament -->
                     <MudItem Class="mx-0 px-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrinterDataHandler.HotendTemperatureService.LoadFilament()">Load Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.LoadFilament()">Load Filament</MudButton>
                     </MudItem>
                     <!-- Button to unload filament -->
                     <MudItem Class="ml-0 pl-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => PrinterDataHandler.HotendTemperatureService.UnloadFilament()">Unload Filament</MudButton>
+                        <MudButton FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => HotendTemperatureService.UnloadFilament()">Unload Filament</MudButton>
                     </MudItem>
                 </MudGrid>
 
@@ -433,18 +442,24 @@
             // Initialize the data list
             data = new List<ITrace>();
 
-            // Check if the serial connection is established and request SD card list if connected
-            if (PortManager.connections != null && PortManager.connections.Count > 0)
+            // // Check if the serial connection is established and request SD card list if connected
+            // if (printerManager.ActivePrinter.SerialConnection.IsConnected && printerManager.Printers.Count > 0)
+            // {
+            //     printerManager.ActivePrinter.SerialConnection.Write(CommandMethods.BuildListSDCardCommand());
+
+            //     // Subscribe to the InputReceived event of the selected printer
+            //     foreach (var port in printerManager.Printers.Values)
+            //     {
+            //         printerManager.InputReceived += OnUpdate;
+            //     }
+            // }
+
+            if (printerManager.Printers != null && printerManager.Printers.Count > 0)
             {
-                PortManager.connections[PortManager.SelectedPrinter].ConnectionServiceSerial.Write(CommandMethods.BuildListSDCardCommand());
+                printerManager.ActivePrinter.SerialConnection.Write(CommandMethods.BuildListSDCardCommand());
 
-                // Subscribe to the InputReceived event of the selected printer
-                foreach (var port in PortManager.connections.Values)
-                {
-                    port.InputReceived += OnUpdate;
-                }
+                printerManager.InputReceived += OnUpdate;
             }
-
 
             // Initialize the configuration for Plotly chart
             config = new Config
@@ -477,10 +492,10 @@
                 };
         });
         // Load preheating profiles from the specified path
-        PrinterDataHandler.preheatingProfiles = PrinterDataHandler.LoadPrinterDataList<MachineControlHub.Material.PreheatingProfiles>(Data.PrinterDataServiceTest.PREHEATING_PROFILES_PATH);
+        PrinterDataHandler.preheatingProfiles = PrinterDataHandler.LoadPrinterDataList<MachineControlHub.Material.PreheatingProfiles>(Data.PrinterDataService.PREHEATING_PROFILES_PATH);
 
         // Load the selected printer settings from the specified path
-        PrinterDataHandler.SelectedPrinter = PrinterDataHandler.LoadPrinterData<MachineControlHub.Printer>(Data.PrinterDataServiceTest.SELECTED_PRINTER_SETTINGS_PATH);
+        PrinterDataHandler.SelectedPrinter = PrinterDataHandler.LoadPrinterData<MachineControlHub.Printer>(Data.PrinterDataService.SELECTED_PRINTER_SETTINGS_PATH);
 
         // Load the bed mesh CSV data from the specified path
         PrinterDataHandler.BedLevelDataService.CSVData = PrinterDataHandler.LoadPrinterData<string>("meshData.json");
@@ -514,10 +529,10 @@
     /// <summary>
     /// Handles updates from the printer.
     /// </summary>
-    /// <param name="message">The message received from the printer.</param> 
-    public async void OnUpdate(string message, SerialDataProcessorService source)
+    /// <param name="message">The message received from the printer.</param>
+    public async void OnUpdate(string message)
     {
-        if (PortManager.SelectedPrinter == source.ConnectionServiceSerial.portName && PortManager.connections.Count > 0)
+        if (printerManager.ActivePrinter.SerialConnection.IsConnected && printerManager.Printers.Count > 0)
         {
             // get the list of files on the SD card
             fileMessage += message;
@@ -559,7 +574,7 @@
             PrintManager.GetPrintingFileName(message);
 
             // parse the current hotend and bed temperatures
-            await PrinterDataHandler.HotendTemperatureService.ParseCurrentHotendTemperature(message);
+            await HotendTemperatureService.ParseCurrentHotendTemperature(message);
             await PrinterDataHandler.BedTemperatureService.ParseCurrentBedTemperature(message);
 
             // Ensure the graph data does not exceed 30 entries by removing the oldest entries
@@ -586,12 +601,12 @@
     /// </summary>
     private void OnSecondElapsed()
     {
-        if(!PortManager.IsBusy)
+        if (!PortManager.IsBusy)
         {
             Task.Run(async () =>
             {
                 // If automatic temperature reporting is not enabled, request temperature data
-                if (!PrinterDataHandler.Printer.HasAutoReportTemperature)
+                if (!PrinterDataHandler.ActivePrinter.HasAutoReportTemperature)
                 {
                     PortManager.connections[PortManager.SelectedPrinter].ConnectionServiceSerial.Write(CommandMethods.BuildReportTemperaturesCommand());
                     Console.WriteLine("reporting");
@@ -669,6 +684,73 @@
         }
     }
 
+    public async Task ConfirmStartAsync()
+    {
+        if (PortManager.ActiveConnection.ConnectionServiceSerial.IsConnected)
+        {
+            bool? result = await DialogService.ShowMessageBox(
+            "Start Print",
+            "Do you want to start a print job?",
+            yesText: "Start!", cancelText: "Cancel");
+
+            if (result == true)
+            {
+                if (PrintManager.fileToPrint == "")
+                {
+                    Snackbar.Add("No file selected", Severity.Error);
+                }
+                else
+                {
+                    PrintManager.StartPrint(PrintManager.fileToPrint);
+                    PrintManager.StartTimeOfPrint();
+                    PrintManager.background.ResetStopwatch();
+                    PrintManager.background.StartStopwatch();
+                    PrintManager.GetFileNameAndSize(PrintManager.fileToPrint);
+                    PrintManager.finalizationExecuted = false; // Reset the flag
+                    Snackbar.Add($"<ul><li>Print Started</li> <li> File Printing: {PrintManager.fileToPrint} </li></ul>", Severity.Success);
+                }
+            }
+        }
+        else
+        {
+            Snackbar.Add("Printer is not connected", Severity.Error);
+            return;
+        }
+    }
+
+    public async Task StopPrint()
+    {
+        if (PortManager.ActiveConnection.ConnectionServiceSerial.IsConnected)
+        {
+            bool? result = await DialogService.ShowMessageBox(
+            "Stop Print",
+            "Do you want to stop the print?",
+            yesText: "Stop!", cancelText: "Cancel");
+
+            if (result == true && PrintManager.isPrinting)
+            {
+                PrintManager.printService.AbortCurrentPrint();
+                PrintManager.background.StopStopwatch();
+                PrintManager.progress = 0;
+                PrintManager.FormatTotalPrintTime();
+                PrintManager.isPrinting = false;
+                PrintManager._printerDataServiceTest.AddPrintJobToHistory(PrintManager.printJob, PortManager.ActiveConnection);
+
+                PrintManager._snackbar.Add("Print Stopped", Severity.Error);
+            }
+            else
+            {
+                Snackbar.Add("Not Printing", Severity.Error);
+                return;
+            }
+        }
+        else
+        {
+            Snackbar.Add("Printer is not connected", Severity.Error);
+            return;
+        }
+    }
+
     public async Task PromptHandler(string message)
     {
         await InvokeAsync(async () =>
@@ -734,14 +816,7 @@
 
     public void Dispose()
     {
-        // background.MessageReceived -= OnUpdate;
-        if (PortManager.connections != null)
-        {
-            foreach (var port in PortManager.connections.Values)
-            {
-                port.InputReceived -= OnUpdate;
-            }
-        }
+        printerManager.InputReceived -= OnUpdate;
         background.SecondElapsed -= OnSecondElapsed;
 
         PortManager.SelectedPrinterChanged -= OnSelectedPrinter;
